.provarCaches/00D410000011HE0EAM/objects/rstk__emailTemplateInfo__c.object
<CustomObject>
    <description>emailTemplateInfo__c :  This Object  can  be used to  store fields from multi Object to display them in email Template.</description>
    <fields>
        <fullName>rstk__formula_reqShipDate__c</fullName>
        <formula>TEXT(MONTH( rstk__poasn_pickupdate__c))+&quot;/&quot; +TEXT(DAY(rstk__poasn_pickupdate__c))+&quot;/&quot; +TEXT(YEAR(rstk__poasn_pickupdate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Ship Date Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poasn_pickupdate__c</fullName>
        <label>Pickup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poconttype_type__c</fullName>
        <label>Container Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poship_shipmentid__c</fullName>
        <label>TMM Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poshipcont_itemmaxf__c</fullName>
        <label>Product Shipping Temp Max (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poshipcont_itemminf__c</fullName>
        <label>Product Shipping Temp Min (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poshipcont_sugmidf__c</fullName>
        <label>Product Temp Mind-Point (F)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__povend_sf_contactName__c</fullName>
        <label>Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__povendpoaddr_city__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__povendpoaddr_contactemail__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rstk__povendpoaddr_country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__povendpoaddr_phone__c</fullName>
        <label>Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__povendpoaddr_stateprov__c</fullName>
        <label>State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__povendpoaddr_street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__povendpoaddr_zippostalcode__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CustomEmailTemplateInfo</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__Detail</fullName>
        <columns>NAME</columns>
        <columns>rstk__povendpoaddr_city__c</columns>
        <columns>rstk__povend_sf_contactName__c</columns>
        <columns>rstk__poconttype_type__c</columns>
        <columns>rstk__povendpoaddr_country__c</columns>
        <columns>rstk__povendpoaddr_phone__c</columns>
        <columns>rstk__poasn_pickupdate__c</columns>
        <columns>rstk__poshipcont_itemmaxf__c</columns>
        <columns>rstk__poshipcont_itemminf__c</columns>
        <columns>rstk__poshipcont_sugmidf__c</columns>
        <columns>rstk__povendpoaddr_stateprov__c</columns>
        <columns>rstk__povendpoaddr_street__c</columns>
        <columns>rstk__poship_shipmentid__c</columns>
        <columns>rstk__povendpoaddr_zippostalcode__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detail</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomEmailTemplateInfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>